gcc/testsuite/rust/rustc/ui/issues/issue-48838.rs
enum Functions {
    Square = |x| x, // { dg-error ".E0308." "" { target *-*-* } }
}

fn main() {}

